compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_list_pattern_discard_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1332
expression: "let assert [_elemOne] = [False]"
snapshot_kind: text
---
----- SOURCE CODE
let assert [_elemOne] = [False]

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let assert [_elemOne] = [False]
  │             ^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _elem_one
