compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_parameter_label.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1261
expression: "fn func(thisIsALabel param: Int) { param }"
snapshot_kind: text
---
----- SOURCE CODE
fn func(thisIsALabel param: Int) { param }

----- ERROR
error: Invalid label name
  ┌─ /src/one/two.gleam:1:9
  │
1 │ fn func(thisIsALabel param: Int) { param }
  │         ^^^^^^^^^^^^ This is not a valid label name

Hint: Label names start with a lowercase letter and contain a-z, 0-9, or _.
Try: this_is_a_label
