compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_parameter_label2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1266
expression: "fn ignore(thisIsALabel _ignore: Int) { 25 }"
snapshot_kind: text
---
----- SOURCE CODE
fn ignore(thisIsALabel _ignore: Int) { 25 }

----- ERROR
error: Invalid label name
  ┌─ /src/one/two.gleam:1:11
  │
1 │ fn ignore(thisIsALabel _ignore: Int) { 25 }
  │           ^^^^^^^^^^^^ This is not a valid label name

Hint: Label names start with a lowercase letter and contain a-z, 0-9, or _.
Try: this_is_a_label
