compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_pattern_label_shorthand.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2182
expression: "\npub type Wibble { Wibble(arg: Int) }\npub fn main() {\n  let Wibble(not_a_label:) = Wibble(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble { Wibble(arg: Int) }
pub fn main() {
  let Wibble(not_a_label:) = Wibble(1)
}


----- ERROR
error: Unknown label
  ┌─ /src/one/two.gleam:4:14
  │
4 │   let Wibble(not_a_label:) = Wibble(1)
  │              ^^^^^^^^^^^^ Did you mean `arg`?

It accepts these labels:

    arg
